@@ -786,4 +786,8 @@ P.imp_center{
 }
 
 
+#tooltip_msg_box {
+    width: 100%;
+    text-align: right;
+}
 
