@@ -1,3 +1,5 @@
+<div id="tooltip_msg_box" style="display:none"><img src='/cultibox/main/libs/img/eye.png' alt='' title="<?php echo __('SHOW_MESSAGE'); ?>" id="eyes_msgbox"></div>
+
 <?php if((((isset($main_info))&&(!empty($main_info))&&(count($main_info)>0)))||((isset($main_error))&&(!empty($main_error))&&(count($main_error)>0))) { ?>
 <div class="message" style="display:none" title="<?php echo __('MESSAGE_BOX'); ?>">
         <br />
@@ -37,7 +39,7 @@
 <?php } ?>
 
 <script>
-    wifi_password=<?php echo(json_encode($wifi_password)); ?>
+    wifi_password=<?php echo(json_encode($wifi_password)); ?>;
 </script>
 
 
