@@ -1,3 +1,5 @@
+<div id="tooltip_msg_box" style="display:none"><img src='/cultibox/main/libs/img/eye.png' alt='' title="<?php echo __('SHOW_MESSAGE'); ?>" id="eyes_msgbox"></div>
+
 <label id="anchor-programs"></label>
 <?php if((isset($pop_up))&&("$pop_up"!="False")&&(isset($pop_up_message))&&(!empty($pop_up_message))) { ?>
     <div class="pop_up_message" style="display:none">
