@@ -6,6 +6,8 @@ Cultibox (1.3.05) precise; urgency=low
     + Correction de l'affichage des coûts: on scroll après le calcul du coût ce qui permet d'éviter un problème d'affichage sur mac
     + Changement de l'affichage du menu de configuration des prises pour ressembler à celui du menu de configuration
     + Ajout de la définition des autres capteurs (ph, ec...)
+    + Ajout de l'heure du min/max des valeurs affichées pour les logs
+    + Possiilité de cacher la boîte de message pour le temps d'une session
 
 -- Yann Genevois <yann.genevois@cultibox.fr> Sun Mar 23 13:48:54 CET 2014
 
